--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'    
+        cache: 'npm' 
+    - run: npm install --package-lock-only
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
