--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "grant_applications_app",
   "version": "0.1.0",
+  "homepage": "https://ChristianTiani.github.io/grant_applications_app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
